               ‘keep.object = TRUE’. However, ‘drop’ is behaviour
               consistent with standard R code,

             • argument ‘data.object’ (‘get_RLum’ for 'RLum.Results'
               objects can now handle numeric values) and numeric, as
               well as character vectors,

             • argument ‘drop’ also added for ‘get_RLum’ method for
               'RLum.Results'.

         • ‘merge_RLum’

             • Method for ‘RLum.Results’ objects now combines the
               data.frame using the function ‘data.table::rbindList’
               this should give a little bit more speed,

             • the method was not working properely for objects of
               types ‘RLum.Results’ if they tried to combine matrices
               and vectors found in the 'data.object' list.

         • ‘length_RLum’

             • Method added for ‘RLum.Results’ objects.

         • ‘names_RLum’

             • Method added for ‘RLum.Data.Curve’,
               ‘RLum.Data.Spectrum’, ‘RLum.Data.Image’, ‘RLum.Analysis’
               and ‘RLum.Results’ objects.

         • ‘replicate_RLum’

             • New method to replicate RLum objects (valid for all
               objects)

         • ‘Risoe.BINfileData-class’

             • Show method now returns the valid grain range,

             • the method ‘get_Risoe.BINfileData’ was never active, but
               the corresponding message on using the function
               ‘Risoe.BINfileData2RLum.Analysis()’ disappeared if a
               user tried to pass additional (unused) arguments.
               Corrected (thanks to Alice Versendaal).

         • RLum.Data.Curve

             • The corresponding ‘set_RLum’ method of this class now
               comes with default values, corresponding to the
               prototype of this class and the method itself does not
               check any longer for missing values, means, empty
               objects can be produced,
