@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.8-0 package
-% Wed Nov 18 19:51:20 2015
+% Wed Nov 18 19:58:28 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -84,7 +84,7 @@
  & $<$br /$>$ inspired by R.G.$<$br /$>$  R Luminescence Package Team \\ 
   44 & get\_Risoe.BINfileData & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RisoeBINfileData S4 class objects.$<$br /$>$ & 0.1.0 & 2015-10-02 & 19:04:55
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  45 & get\_RLum & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RLum S4 class objects.$<$br /$>$ & 0.3.0 & 2015-11-18 & 19:38:41
+  45 & get\_RLum & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RLum S4 class objects.$<$br /$>$ & 0.3.0 & 2015-11-18 & 19:53:37
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   46 & length\_RLum & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RLum S4 class objects.$<$br /$>$ & 0.1 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
